fix item alignment

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -268,7 +268,7 @@ h3 {
 
 .grid-item-2-row {
 	display: grid;
-	grid-template-columns: auto 1fr auto;
+	grid-template-columns: auto auto 1fr;
 	grid-template-rows: auto auto;
 	padding: 4px 10px;
 	margin-bottom: 1px;
@@ -280,7 +280,7 @@ h3 {
 
 .grid-item-1-row {
 	display: grid;
-	grid-template-columns: auto 1fr auto;
+	grid-template-columns: auto auto 1fr;
 	padding: 8px 10px;
 	margin-bottom: 2px;
 	gap: 15px;
@@ -305,7 +305,7 @@ h3 {
 	border-radius: $radius-sm;
 	opacity: 0.3;
 	transition: opacity $transition-fast, color $transition-fast, background-color $transition-fast;
-	grid-column: 3;
+	grid-column: 1;
 	grid-row: 1 / -1; // span all rows in the grid
 
 	&:hover {
@@ -324,13 +324,13 @@ h3 {
 	display: flex;
 	align-items: center;
 	gap: 4px;
-	grid-column: 1;
+	grid-column: 2;
 }
 
 .column1 {
 	display: grid;
 	gap: 0.3rem;
-	grid-column: 2;
+	grid-column: 3;
 	text-align: left;
 }
 
